<resources>

    <string name="app_name">Siminov Book</string>

    <!-- C Book Constants -->
    <string name="c_description">C Book Description</string>
    <string name="c_author">C book Author</string>
    <string name="c_link">C Book Link</string>


    <!-- C++ Book Constants -->
    <string name="c_plus_description">C++ Book Description</string>
    <string name="c_plus_author">C++ Book Author</string>
    <string name="c_plus_link">C++ Book Link</string>


    <!-- C# Book Constants -->
    <string name="c_sharp_description">C# Book Description</string>
    <string name="c_sharp_author">C# Book Author</string>
    <string name="c_sharp_link">C# Book Link</string>



    <!-- Java Constants -->
    <string name="java_description">Java Book Description</string>
    <string name="java_author">Java Book Author</string>
    <string name="java_link">Java Book Link</string>


    <!-- JavaScript Book Constants -->
    <string name="javascript_descrption">JavaScript Book Description</string>
    <string name="javascript_author">Javascript Book Author</string>
    <string name="javascript_link">JavaScript Book Link</string>


    <!-- Objective-C Book Constants -->
    <string name="objectivec_description">Objective - C Book Description</string>
    <string name="objectivec_author">Objective - C Author</string>
    <string name="objectivec_link">Objective - C Link</string>


    <!-- Swift Book Constants -->
    <string name="swift_description">Swift Description</string>
    <string name="swift_author">Swift Author</string>
    <string name="swift_link">Swift Link</string>




    <!-- C First Lession Constants -->
    <string name="c_first_lession_name">First Lession</string>
    <string name="c_first_lession_description">First Lession Description</string>
    <string name="c_first_lession_link">First Lession Link</string>

    <!-- C Second Lession Constants -->
    <string name="c_second_lession_name">Second Lession</string>
    <string name="c_second_lession_description">Second Lession Description</string>
    <string name="c_second_lession_link">Second Lession Link</string>


    <!-- C++ First Constants -->
    <string name="c_plus_first_lession_name">First Lession</string>
    <string name="c_plus_first_lession_description">First Lession Description</string>
    <string name="c_plus_first_lession_link">First Lession Link</string>

    <!-- C++ Second Constants -->
    <string name="c_plus_second_lession_name">Second Lession</string>
    <string name="c_plus_second_lession_description">Second Lession Description</string>
    <string name="c_plus_second_lession_link">Second Lession Link</string>


    <!-- C# First Lession Constants -->
    <string name="c_sharp_first_lession_name">First Lession</string>
    <string name="c_sharp_first_lession_description">First Lession Description</string>
    <string name="c_sharp_first_lession_link">First Lession Link</string>

    <!-- C# Second Lession Constants -->
    <string name="c_sharp_second_lession_name">Second Lession</string>
    <string name="c_sharp_second_lession_description">Second Lession Description</string>
    <string name="c_sharp_second_lession_link">Second Lession Link</string>


    <!-- Java First Lession Constants -->
    <string name="java_first_lession_name">First Lession</string>
    <string name="java_first_lession_description">First Lession Description</string>
    <string name="java_first_lession_link">First Lession Link</string>

    <!-- Java Second Lession Constants -->
    <string name="java_second_lession_name">Second Lession</string>
    <string name="java_second_lession_description">Second Lession Description</string>
    <string name="java_second_lession_link">Second Lession Link</string>


    <!-- JavaScript First Lession Constants -->
    <string name="javascript_first_lession_name">First Lession</string>
    <string name="javascript_first_lession_description">First Lession Description</string>
    <string name="javascript_first_lession_link">First Lession Link</string>

    <!-- JavaScript Second Lession Constants -->
    <string name="javascript_second_lession_name">Second Lession</string>
    <string name="javascript_second_lession_description">Second Lession Description</string>
    <string name="javascript_second_lession_link">Second Lession Link</string>


    <!-- Objective C First Lession Constants -->
    <string name="objectivec_first_lession_name">First Lession</string>
    <string name="objectivec_first_lession_description">First Lession Description</string>
    <string name="objectivec_first_lession_link">First Lession Link</string>


    <!-- Objective C Second Lession Constants -->
    <string name="objectivec_second_lession_name">Second Lession</string>
    <string name="objectivec_second_lession_description">Second Lession Description</string>
    <string name="objectivec_second_lession_link">Second Lession Link</string>


    <!-- Swift First Lession -->
    <string name="swift_first_lession_name">First Lession</string>
    <string name="swift_first_lession_description">First Lession Description</string>
    <string name="swift_first_lession_link">First Lession Link</string>


    <!-- Swift Second Lession -->
    <string name="swift_second_lession_name">Second Lession</string>
    <string name="swift_second_lession_description">Second Lession Description</string>
    <string name="swift_second_lession_link">Second Lession Link</string>


    <!-- BOOK-LIST CONSTANTS -->
    <string name="title_bar_options">Options</string>
    <string name="book_details">Details</string>

    <!--  -->
    <string name="books">Books</string>
    <string name="book_description">Description</string>
    <string name="book_author">Author</string>
    <string name="book_link">Link</string>
    <string name="lession_detail">Detail</string>
    <string name="lessions">Lessions</string>

    <string name="source_code"><u>Source Code</u></string>

    <string name="source_code_package_name">siminov/core/sample/sourcecode/</string>
    <string name="home_source_code_file_name">home_source_code.txt</string>

    <string name="welcome_note">Welcome</string>
    <string name="create_new_account">Create A New Account</string>
    <string name="login_with_your_credentials">Please Login With Your Credentials</string>

    <string name="login_account_id">Account Id: </string>
    <string name="login_token">Token: </string>

    <string name="enter_account_id">Enter Account Id</string>
    <string name="enter_token">Enter Token</string>

    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

    <string name="account_id_and_token_mandatory">Both Account Id And Token Are Mandatory.</string>

	<string name="about_siminov">Siminov Core is a open source Object/Relational Mapping solution for Android environments. It maps data from an object model representation to a relational data model representation (and visa versa).

Siminov Core not only takes care of the mapping from Java classes to database tables (and from Java data types to SQL data types), but also provides data query and retrieval facilities.</string>

    <string name="add_lession">Lession</string>
    <string name="add_book">Add Book</string>
	<string name="add_book_description">Description</string>
	<string name="add_book_author">Author</string>
	<string name="add_book_link">Link</string>
	<string name="save_book">Save</string>
	
	<string name="add_lession_name">Name</string>
	<string name="add_lession_description">Description</string>
	<string name="add_lession_link">Link</string>
	<string name="save_lession">Save</string>
				
	<string name="add_book_title">Add Book</string>

	<string name="delete_book">Delete</string>
	
</resources>