<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/background_theme"
    >

    <fragment android:name="siminov.connect.sample.fragments.TitleBar" android:id="@+id/title_bar"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/add_lession"
                />

            <EditText android:id="@+id/add_lession"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/add_book_description"
                />

            <EditText android:id="@+id/add_book_description"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/add_book_author"
                />

            <EditText android:id="@+id/add_book_author"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/add_book_link"
                />

            <EditText android:id="@+id/add_book_link"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
