<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/book_description" android:textColor="@android:color/black"
            android:layout_marginLeft="20dip" android:textStyle="bold"
            />

    </LinearLayout>

    <!-- Book Description -->
    <siminov.connect.sample.artist.ExpandablePanel
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:artist="http://schemas.android.com/apk/res/siminov.connect.sample"

        android:layout_height="wrap_content" android:layout_width="fill_parent"
        artist:handle="@+id/expand" artist:content="@+id/value"
        android:orientation="vertical"  artist:collapsedHeight="80dip"
        android:background="@drawable/lession_artist" android:layout_marginTop="-10dip"
        >

        <LinearLayout android:id="@id/value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
                >

                <TextView android:id="@+id/book_description"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_marginLeft="5dip"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:gravity="right"
                >

                <ImageView android:id="@id/expand"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@drawable/down_32"
                    />

            </LinearLayout>

        </LinearLayout>

    </siminov.connect.sample.artist.ExpandablePanel>

    <LinearLayout
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/book_author" android:textColor="@android:color/black"
            android:layout_marginLeft="20dip" android:textStyle="bold"
            />

    </LinearLayout>

    <!-- Book Author -->
    <siminov.connect.sample.artist.ExpandablePanel
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:artist="http://schemas.android.com/apk/res/siminov.connect.sample"

        android:layout_height="wrap_content" android:layout_width="fill_parent"
        artist:handle="@+id/expand" artist:content="@+id/value"
        android:orientation="vertical"  artist:collapsedHeight="80dip"
        android:background="@drawable/lession_artist" android:layout_marginTop="-10dip"
        >

        <LinearLayout android:id="@id/value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
                >

                <TextView android:id="@+id/book_author"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_marginLeft="5dip"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:gravity="right"
                >

                <ImageView android:id="@id/expand"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@drawable/down_32"
                    />

            </LinearLayout>

        </LinearLayout>

    </siminov.connect.sample.artist.ExpandablePanel>

    <LinearLayout
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/book_link" android:textColor="@android:color/black"
            android:layout_marginLeft="20dip" android:textStyle="bold"
            />

    </LinearLayout>


    <!-- Book Link -->
    <siminov.connect.sample.artist.ExpandablePanel
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:artist="http://schemas.android.com/apk/res/siminov.connect.sample"

        android:layout_height="wrap_content" android:layout_width="fill_parent"
        artist:handle="@+id/expand" artist:content="@+id/value"
        android:orientation="vertical"  artist:collapsedHeight="80dip"
        android:background="@drawable/lession_artist" android:layout_marginTop="-10dip"
        >

        <LinearLayout android:id="@id/value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
                >

                <TextView android:id="@+id/book_link"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@android:color/black" android:layout_marginLeft="5dip"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:gravity="right"
                >

                <ImageView android:id="@id/expand"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@drawable/down_32"
                    />

            </LinearLayout>

        </LinearLayout>

    </siminov.connect.sample.artist.ExpandablePanel>

</LinearLayout>